--- a/r_resume.html
+++ b/r_resume.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<body style="background-color: rgb(10, 89, 126);">
+<body style="background-color:ghostwhite;">
 
     <h4 align="center" style="background-color:darkorange"><strong>OUALIFICATIONS</strong></h4>
 
